<resources>

    <!-- Login -->
    <string name="app_name">Mi Negocio MK</string>
    <string name="usuario">e-mail</string>
    <string name="pass">Contaseña</string>
    <string name="registrate"><u>Regístrate</u></string>
    <string name="iniciaSesion">Iniciar Sesión</string>
    <string name="descripLogo">Logo</string>
    <string name="guardarSesion">Guardar Sesión</string>

    <!-- Registro -->
    <string name="userMkOpcional">Usuario Mary Kay (Opcional)</string>
    <string name="passMkOpcional">Contraseña Mary Kay (Opcional)</string>
    <string name="nivelMk">Nivel (Consultora)</string>
    <string name="errorRegistro">!Ocurrio un error, intentelo de nuevo !</string>
    <string name="emailInvalido">E-mail no valido</string>

    <string name="actualizacionExitosa">Los datos se actualizaron correctamente.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Seleccionar_cliente">Seleccionar Cliente</string>
    <string name="action_settings">Settings</string>
    <string name="Ventas">Ventas</string>
    <string name="inventario">Inventario</string>
    <string name="sinInventario">No cuentas con articulos en tu inventario.</string>
    <string name="sinConsultorasUnidad">No cuentas con consultoras en tu unidad.</string>
    <string name="clientes">Clientes</string>
    <string name="catalogo">Catalogo</string>
    <string name="datosdeusuario">Datos de usuario</string>
    <string name="compartir">Compartir</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="compartirAmigo">Compartir con tus amigos</string>
    <string name="nav_perfil">Perfil</string>
    <string name="title_activity_form_nuevo_cliente">Nuevo Cliente</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="llamando">Llamando</string>
    <string name="Actualizar">Actualizar</string>
    <string name="DatosActualizados">¡Datos Actualizados correctamente!</string>
    <string name="ErrorActualiza">¡Ocurrior un error al actualizar los datos!, intente de nuevo.</string>
    <string name="RegistroExitoso">¡Registro exitoso!</string>
    <string name="Consultoras">Consultoras</string>
    <string name="miUnidad">Mi unidad</string>
    <string name="Campovacio">Campo vacio, inserta un dato valido</string>
    <string name="NuevoProducto">Nuevo Producto</string>
    <string name="Cancelar">Cancelar</string>
    <string name="NuevoProductoInventario">Agregar un nuevo producto al inventario</string>
    <string name="EnInventario">En inventario</string>
    <string name="AgregarInventario">Agregar a inventario</string>
    <string name="Minstock">Stock minimo</string>
    <string name="PrecioCompra">Precio de compra</string>
    <string name="PrecioVenta">Precio de venta</string>
    <string name="Agregar">Agregar</string>
    <string name="camposVacios">Asegurate de haber llenado los campos obligatorios</string>
    <string name="action_search">Buscar…</string>
    <string name="Ventaactual">Venta Actual</string>
    <string name="Buscar">Buscar…</string>
    <string name="Stock">Strock: </string>
    <string name="simbol_moneda">$ </string>
    <string name="Productoagregado">¡ Producto Agregado !</string>
    <string name="Cobrar">Cobrar   $</string>
    <string name="nuevoCliente">Nuevo Cliente</string>
    <string name="nuevaConsultora">Nueva Consultora</string>
    <string name="cobrar">Cobrar $%1$s</string>
    <string name="cero">0</string>

    <string name="Nombre">Nombre</string>
    <string name="Direcccion">Direccion</string>
    <string name="Telefono">Telefono</string>
    <string name="Ocupacion">Ocupacion</string>
    <string name="Guardar">Guardar</string>
    <string name="Error_Sesion">!Error¡ Usuario o contraseña incorrectos</string>

    <!-- Activity Titles -->
    <string name="title_activity_client_list">Clientes</string>
    <string name="title_activity_edit__client">Actualiza Cliente</string>
    <string name="title_activity_catalogo">Catalogo</string>
    <string name="title_activity_inventario">Inventario</string>
    <string name="title_activity_form_agregar_stock">Actualiza Stock</string>
    <string name="title_activity_menu_principal">Menu Principal</string>
    <string name="title_activity_registro">Registrate</string>
    <string name="title_activity_venta">Venta</string>
    <string name="title_activity_registrate">Registrate</string>
    <string name="title_activity_consultora_list">ConsultoraList</string>
    <string name="title_activity_user_profile">UserProfile</string>

    <string name="cantidad">Stock: %1$s</string>
    <string name="cantidadMin">Stock Minimo: %1$s</string>

    <string name="registraUnidad">Registra tu unidad</string>
    <string name="title_activity_mi_unidad">MiUnidad</string>

    <string name="descriptionImage">image</string>

    <string name="prestar">Prestar</string>
    <string name="abonar">Abonar</string>
    <string name="vender">Vender</string>

    <string name="topClientes">Top Clientas</string>
    <string name="producto">Producto</string>
    <string name="disponible">Disponible: %1$s</string>

</resources>
