<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/clientes" />
        <item
            android:id="@+id/nav_ventas"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/Ventas" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/inventario" />
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/catalogo" />
        <item
            android:id="@+id/consultoras"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/Consultoras"/>

    </group>

    <item android:title="@string/datosdeusuario">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_usuario" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
