<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_form_nuevo_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="chris.sesi.com.minegociomk.FormNuevoCliente"
    tools:showIn="@layout/activity_form_nuevo_cliente">



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="60dp">
    <ImageView
        android:id="@+id/iconPerson"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_heght"
        android:src="@drawable/ic_person_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iconPerson"
        android:inputType="textPersonName"
        android:hint="@string/Nombre"
        android:ems="10"
        android:id="@+id/nuevoClienteNombre" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/iconDireccion"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_heght"
            android:src="@drawable/ic_place_black_24dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/iconDireccion"
        android:inputType="text"
        android:hint="@string/Direcccion"
        android:id="@+id/nuevoClienteDireccion"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/iconTelefono"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_heght"
            android:src="@drawable/ic_call_black_24dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iconTelefono"
            android:inputType="phone"
            android:hint="@string/Telefono"
            android:id="@+id/nuevoClienteTelefono"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/iconTrabajo"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_heght"
            android:src="@drawable/ic_business_black_24dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iconTrabajo"
            android:inputType="text"
            android:hint="@string/Ocupacion"
            android:id="@+id/nuevoClienteOcupacion"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:text="@string/Guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:id="@+id/btn_nuevoClienteOk" />

    </LinearLayout>




</LinearLayout>
