<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_saveConsultora">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/registro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/nuevaConsultora"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
            android:id="@+id/edt_nombre_consultora"
            style="@style/EditTextFormStyle"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registro_title"
            app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/edt_nivel_consultora"
                style="@style/EditTextFormStyle"
                android:drawableStart="@drawable/ic_trending_up_black_24dp"
                android:drawablePadding="10dp"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/nivelMk"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_nombre_consultora"
                app:layout_constraintHorizontal_bias="0.0" />

            <EditText
            android:id="@+id/edt_direccion_consultora"
            style="@style/EditTextFormStyle"
            android:drawableStart="@drawable/ic_place_black_24dp"
            android:drawablePadding="10dp"
            android:layout_width="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/Direcccion"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_nivel_consultora"
            app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/edt_telefono_consultora"
                style="@style/EditTextFormStyle"
                android:drawableStart="@drawable/ic_call_black_24dp"
                android:drawablePadding="10dp"
                android:layout_width="0dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/Telefono"
                android:inputType="number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_direccion_consultora"
                app:layout_constraintHorizontal_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_saveConsultora"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="@dimen/sizeHeighButton"
        android:text="@string/Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="1dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>