<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="chris.sesi.com.minegociomk.FormAgregarStock"
    tools:showIn="@layout/activity_form_agregar_stock"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:id="@+id/nestedScrollView2"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_agregar_stock"
        app:layout_constraintVertical_bias="0.0">

       <android.support.constraint.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">


           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:id="@+id/form_stock_nombre_producto"
               android:text="@string/NuevoProducto"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
               android:textSize="@dimen/article_titles"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:textAlignment="center"
               android:layout_marginLeft="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginTop="8dp"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp" />

           <de.hdodenhof.circleimageview.CircleImageView
               android:layout_width="120dp"
               android:layout_height="120dp"
               android:src="@drawable/ni_image"
               android:layout_marginTop="16dp"
               app:layout_constraintTop_toBottomOf="@+id/form_stock_nombre_producto"
               android:layout_marginStart="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:id="@+id/circleImageViewProduct" />

           <TextView
               android:layout_width="0dp"
               android:layout_height="0dp"
               android:id="@+id/form_stock_cant_stock"
               android:text="@string/cero"
               android:textAlignment="center"
               android:gravity="center"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
               android:textSize="@dimen/stock_form"
               app:layout_constraintLeft_toRightOf="@+id/circleImageViewProduct"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginTop="16dp"
               app:layout_constraintTop_toBottomOf="@+id/form_stock_nombre_producto"
               app:layout_constraintHorizontal_bias="0.0"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toTopOf="@+id/textView7" />

           <TextView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/EnInventario"
               android:textSize="@dimen/article_subheading"
               android:textAlignment="center"
               app:layout_constraintLeft_toRightOf="@+id/circleImageViewProduct"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintHorizontal_bias="0.0"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp"
               android:layout_marginBottom="9dp"
               app:layout_constraintBottom_toTopOf="@+id/lNameLayoutStock"
               android:id="@+id/textView7" />

           <android.support.design.widget.TextInputLayout
               android:id="@+id/lNameLayoutStock"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/circleImageViewProduct"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginLeft="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/item_stock"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:hint="@string/AgregarInventario"
                   android:inputType="number" />
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/lNameLayoutMinStock"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/lNameLayoutStock"
               android:layout_marginLeft="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/item_minstock"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:hint="@string/Minstock"
                   android:inputType="number"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/lNameLayoutcompra"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/lNameLayoutMinStock"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginLeft="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/item_compra"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:hint="@string/PrecioCompra"
                   android:inputType="numberDecimal"/>
           </android.support.design.widget.TextInputLayout>

           <android.support.design.widget.TextInputLayout
               android:id="@+id/lNameLayoutventa"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toBottomOf="@+id/lNameLayoutcompra"
               android:layout_marginLeft="8dp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginRight="8dp"
               app:layout_constraintRight_toRightOf="parent"
               android:layout_marginStart="8dp"
               android:layout_marginEnd="8dp">

               <android.support.design.widget.TextInputEditText
                   android:id="@+id/item_venta"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:ems="10"
                   android:hint="@string/PrecioVenta"
                   android:inputType="numberDecimal"/>
           </android.support.design.widget.TextInputLayout>

       </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_agregar_stock"
        android:text="@string/Agregar"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>

